# genrl-swarm-zh1p4ng

./: .gitignore  .pdm-python  getting_started.ipynb  pyproject.toml
kubernetes/gsm8k/: torch.yaml
kubernetes/multistage_math/: torch.yaml
kubernetes/rgym/: torch.yaml
kubernetes/testing/: test.yaml  test_hivemind.yaml
recipes/multistage_math/: msm_bigmath_grpo.yaml  msm_dapodata_grpo.yaml  msm_gsm8k_grpo.yaml
recipes/rgym/: rg-swarm-torch.yaml  rg-swarm.yaml
recipes/testing/: hivemind_test.yaml  test.yaml
recipes/vision/: text-2-image.yaml
scripts/: train.sh  train_hivemind.sh
src/genrl_swarm/blockchain/: __init__.py  connections.py  coordinator.py
src/genrl_swarm/common/: tokenizer_utils.py
src/genrl_swarm/communication/: __init__.py  communication.py
src/genrl_swarm/data/: __init__.py  data_manager.py  hf_data_manager.py  text_data_managers.py
src/genrl_swarm/game/: __init__.py  game_manager.py
src/genrl_swarm/logging_utils/: global_defs.py  ml_logger.py  system_utils.py
src/genrl_swarm/misc_utils/: memory_monitor.py  omega_gpu_resolver.py  omega_random_resolver.py  utils.py
src/genrl_swarm/rewards/: __init__.py  reward_manager.py  reward_store.py  text_games_reward_utils.py
src/genrl_swarm/roles/: __init__.py  role_manager.py
src/genrl_swarm/runner/: hivemind_launcher.py  launcher.py  swarm_launcher.py
src/genrl_swarm/state/: __init__.py  (+2 more)
test/data/: test_hf_data_manager.py
test/rewards/: test_reward_manager.py  test_reward_store.py
test/serialization/: test_serialization.py
test/state/: test_game_state.py  test_game_tree.py
(+30 files in other folders)
